# finsheet-agent

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: build.py  generator.py  ground_truth.py  questions.py  templates.py  variants.py  verifier.py
bench/data/: ground_truth.jsonl  manifest.json
bench/data--/: ground_truth.jsonl  manifest.json
bench/data--/files/: synthetic1_A.canonical.parquet  synthetic1_A.xlsx  synthetic1_B.canonical.parquet  synthetic1_B.xlsx  synthetic1_C.canonical.parquet  synthetic2_A.canonical.parquet  synthetic2_A.xlsx  synthetic2_B.canonical.parquet  synthetic2_B.xlsx  synthetic2_C.canonical.parquet  synthetic2_C.xlsx  synthetic3_A.canonical.parquet  synthetic3_A.xlsx  synthetic3_B.canonical.parquet  synthetic3_C.canonical.parquet  synthetic3_C.xlsx  synthetic4_A.canonical.parquet  synthetic4_B.canonical.parquet  synthetic4_C.canonical.parquet  synthetic4_C.xlsx  synthetic5_A.canonical.parquet  synthetic5_A.xlsx  synthetic5_B.canonical.parquet  synthetic5_C.canonical.parquet  (+14 more)
docs/: M1_3_RUNNING.md  M1_4_RUNNING.md  M2_1_RUNNING.md  M2_2_RUNNING.md  M2_3_RUNNING.md  PARTIAL_EVAL.md  SETUP.md  decisions.md  eval-report.json  eval-report.md  synthetic-bench.md
docs/history/: eval-report-agent-2.5pro-hardtier-pre-D18.json  eval-report-agent-2.5pro-hardtier-pre-D18.md  eval-report-baseline-fullcontext-2.5pro-final.md  eval-report-baseline-naive-rag-2.5pro-final.json  eval-report-baseline-naive-rag-2.5pro-final.md
scripts/: build_sandbox_image.py  run_agent_plan.py  run_baseline.py  run_question_end_to_end.py  smoke_test.py  start_mcp_server.py
tests/: test_agent_solver.py  test_agents.py  test_baseline.py  test_bench.py  test_computation.py  test_mcp.py
(+50 files in other folders)
