[project]
name = "finsheet-agent"
version = "0.1.0"
description = "Multi-agent system for financial spreadsheet QA, applying the CoDaS architectural pattern to FinSheet-Bench."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Toma Ijatomi" },
]
license = { text = "MIT" }

# Core deps — what bench construction and the smoke test need.
# Agent + observability + UI deps are optional groups, installed on demand.
dependencies = [
    "openpyxl>=3.1",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "python-dateutil>=2.9",
    "python-dotenv>=1.0",
    "google-genai>=1.0",
]

[project.optional-dependencies]
# Week 2 deps — full agent stack
agents = [
    "google-adk>=0.1",
    "google-cloud-aiplatform>=1.112",
    "mcp>=0.4",
]
# Observability for traces + cost tracking
observability = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "langfuse>=2.50",
]
# Demo UI
ui = [
    "streamlit>=1.40",
]
# Dev / test / lint
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "rapidfuzz>=3.10",
    "tqdm>=4.66",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["bench/data"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bench", "src/finsheet"]
